# flue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_pipeline_metrics.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: AdminPage.jsx  App.jsx  index.css  shared.jsx
src/gridcarbon/: __init__.py
src/gridcarbon/api/: app.py
src/gridcarbon/cli/: main.py
src/gridcarbon/forecaster/: heuristic.py
src/gridcarbon/models/: __init__.py  exceptions.py  forecast.py  fuel_mix.py
src/gridcarbon/pipeline/: ingest.py
src/gridcarbon/sources/: emission_factors.py  nyiso.py  weather.py
src/gridcarbon/storage/: __init__.py  async_store.py  store.py
tests/: conftest.py  test_gridcarbon.py  test_pipeline_integration.py
